# flight_analysis

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
analysis/: main.py
flight_analysis/: asgi.py  settings.py  urls.py  wsgi.py
flight_data/: admin.py  apps.py  views.py
flight_data/migrations/: 0001_initial.py
flight_data/models/: base.py  flight.py  status.py  telemetry.py
flight_data/serializers/: flight.py  status.py  telemetry.py
flight_data/services/: Influx_service.py  csv_service.py
flight_data/templates/admin/: change_form.html
